--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- © 2025 Adrián Sabino Pérez. Todos los derechos reservados. Prohibida la reproducción o imitación total o parcial del código sin autorización. -->
+ 
 <!DOCTYPE html>
 <html lang="es">
 
@@ -717,6 +718,13 @@
                         <div class="tooltip">Más información</div>
                     </div>
 
+                    <!-- Singapur -->
+                    <div class="country-card">
+                        <img src="resources/Flags/Singapore.png" alt="Singapore">
+                        <span class="country-name">Singapore</span>
+                        <div class="tooltip">Más información</div>
+                    </div>
+
                     <!-- Andorra -->
                     <div class="country-card">
                         <img src="resources/Flags/Andorra.png" alt="Andorra">
@@ -773,6 +781,13 @@
                         <div class="tooltip">Más información</div>
                     </div>
 
+                    <!-- Grecia -->
+                    <div class="country-card">
+                        <img src="resources/Flags/Greece.png" alt="Greece">
+                        <span class="country-name">Greece</span>
+                        <div class="tooltip">Más información</div>
+                    </div>
+
                     <!-- Hungary -->
                     <div class="country-card">
                         <img src="resources/Flags/Hungary.png" alt="Hungary">
@@ -780,13 +795,6 @@
                         <div class="tooltip">Más información</div>
                     </div>
 
-                    <!-- Grecia -->
-                    <div class="country-card">
-                        <img src="resources/Flags/Greece.png" alt="Greece">
-                        <span class="country-name">Greece</span>
-                        <div class="tooltip">Más información</div>
-                    </div>
-                    
                     <!-- Bulgaria -->
                     <div class="country-card">
                         <img src="resources/Flags/Bulgaria.png" alt="Bulgaria">
@@ -850,10 +858,17 @@
                         <div class="tooltip">Más información</div>
                     </div>
 
-                    <!-- Panama -->
+                    <!-- Finland -->
                     <div class="country-card">
-                        <img src="resources/Flags/Panama.png" alt="Panama">
-                        <span class="country-name">Panama</span>
+                        <img src="resources/Flags/Finland.png" alt="Finland">
+                        <span class="country-name">Finland</span>
+                        <div class="tooltip">Más información</div>
+                    </div>
+
+                    <!-- Suecia -->
+                    <div class="country-card">
+                        <img src="resources/Flags/Sweden.png" alt="Sweden">
+                        <span class="country-name">Sweden</span>
                         <div class="tooltip">Más información</div>
                     </div>
 
@@ -864,17 +879,17 @@
                         <div class="tooltip">Más información</div>
                     </div> 
 
-                    <!-- Suecia -->
+                    <!-- Panama -->
                     <div class="country-card">
-                        <img src="resources/Flags/Sweden.png" alt="Sweden">
-                        <span class="country-name">Sweden</span>
+                        <img src="resources/Flags/Panama.png" alt="Panama">
+                        <span class="country-name">Panama</span>
                         <div class="tooltip">Más información</div>
                     </div>
 
-                    <!-- Finland -->
+                    <!-- Georgia -->
                     <div class="country-card">
-                        <img src="resources/Flags/Finland.png" alt="Finland">
-                        <span class="country-name">Finland</span>
+                        <img src="resources/Flags/Georgia.png" alt="Georgia">
+                        <span class="country-name">Georgia</span>
                         <div class="tooltip">Más información</div>
                     </div>
 
@@ -899,12 +914,19 @@
                         <div class="tooltip">Más información</div>
                     </div>
 
-                    <!-- Latvia -->
+                    <!-- Letonia -->
                     <div class="country-card">
                         <img src="resources/Flags/Latvia.png" alt="Latvia">
                         <span class="country-name">Latvia</span>
                         <div class="tooltip">Más información</div>
-                    </div>                    
+                    </div>  
+                    
+                    <!-- Lituania -->
+                    <div class="country-card">
+                        <img src="resources/Flags/Lithuania.png" alt="Lithuania">
+                        <span class="country-name">Lithuania</span>
+                        <div class="tooltip">Más información</div>
+                    </div> 
 
                     <!-- Mexico -->
                     <div class="country-card">
