--- a/index.html
+++ b/index.html
@@ -1138,14 +1138,31 @@
                             las amenazas más comunes, cómo proteger sistemas y comprender la importancia de 
                             la seguridad en la infraestructura digital.
                         </p>
-
-                        <!-- ✅ Se agregó el ID que faltaba -->
                         <div id="cybersec-skills" class="skills-icons">
                             <p id="cybersec-skills-title"><b>Habilidades Adquiridas:</b></p>
                             <span>Threat Detection</span>
                         </div>
-
                     </div>
+
+                    <div class="education-item">
+                        <h4 id="networkingbasics-title">Networking Basics</h4>
+                        <p id="networkingbasics-center" class="issuer"><b>Centro:</b> Cisco Networking Academy</p>
+                        <p id="networkingbasics-date" class="date"><b>Fecha:</b> Enero 2025</p>
+                        <p id="networkingbasics-description" class="description">
+                            <b>Descripción:</b> Certificación en fundamentos de redes, centrada en los principios básicos de conectividad, 
+                            tipos de redes, modelos OSI y TCP/IP, direccionamiento IP, subredes, y el funcionamiento de dispositivos 
+                            como switches y routers. Introducción a las buenas prácticas en seguridad de redes y resolución de problemas comunes.
+                        </p>
+                        <div id="networkingbasics-skills" class="skills-icons">
+                            <p id="networkingbasics-skills-title"><b>Habilidades Adquiridas:</b></p>
+                            <span>Conceptos fundamentales de redes y conectividad</span>
+                            <span>Modelo OSI y modelo TCP/IP</span>
+                            <span>Direccionamiento IP y subredes</span>
+                            <span>Funcionamiento de switches y routers</span>
+                            <span>Identificación y resolución básica de incidencias</span>
+                            <span>Principios básicos de seguridad en redes</span>
+                        </div>
+                    </div>                    
                 </div>
 
 
